# weave

./: .gitignore  AGENTS.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MANUAL.md  Makefile  README.md  lib.rs  main.rs  mmap.rs  symbols.rs
.github/workflows/: ci.yml
darwin/: dyld.rs  mod.rs  xnu.rs
libc/: darwin.rs  dlfcn.rs  malloc.rs  mod.rs  pthread.rs  rand.rs  time.rs
licenses/: LICENSE-dyld.md  LICENSE-dynamorio.txt  LICENSE-mambo.txt  LICENSE-xnu.md
linux/: elf.rs  linux.rs  mod.rs
macros/src/: lib.rs
runtime/: mod.rs  random.rs  time.rs
runtime/arm64/: assembler.rs  dispatcher.S  dispatcher.rs  mod.rs  signal.rs  translate.rs
runtime/x86/: assembler.rs  dispatcher.S  dispatcher.rs  mod.rs  signal.rs  translate.rs
scripts/: repeat
sys/: mod.rs
sys/darwin/: dyld.rs  dyld_cache.rs  mod.rs  xnu.rs
sys/linux/: elf.rs  glibc.rs  kernel.rs  ld_linux.rs  mod.rs  syscall.rs
testing/: run-test.sh
testing/abi/: .gitignore  Makefile  bitwise.c  callback.c  callee_saved.c  complex_control.c  float_args.c  int_fp_mixed.c  loops.c  many_args.c  recursion_deep.c  register_pressure.c  setjmp_test.c  stack_align.c  string_ops.c  struct_args.c  switch.c  tail_call.c  varargs.c
testing/darwin-arm64/: .gitignore  Makefile  adr-adrp.S  arith-flags.S  blr-x30.S  branch-b.S  branch-backward.S  branch-bl.S  branch-cbz.S  branch-cond.S  branch-indirect.S  branch-nzcv.S  branch-pac.S  branch-test.S  cf.c  cond-codes.S  dlsym.c  exit.S  jump-table.S  ldr-fp-clobber.S  ldr-literal.S  loop.c  mem-addressing.S  mul-div.S  random.c  shifts-bitops.S  time.c  (+3 more)
(+43 files in other folders)
