[package]
name = "weave"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "weave"
path = "main.rs"

[lib]
name = "weave"
path = "lib.rs"

[dependencies]
disarm64 = "0.1.24"
goblin = "0.9"
iced-x86 = "1.21"
intervaltree = "0.2.7"
libc = "0.2.172"
linkme = "0.3"
macros = { path = "macros" }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
